--- a/15-Godiva.tex
+++ b/15-Godiva.tex
@@ -868,7 +868,7 @@ Remark: during the extraction process (index $=3$), the observations located bet
 \begin{enumerate}
  \item Create a contour file in JRA4/Climatology/input such as \file{cutNCDF.cont}, see example file \ref{cutNCDFexp} for a square-shaped contour. First line : number of contours 
  (has to be 1 for the moment), second line : number of points, other lines : lon and lat of the successive contour points.
- \item Edit divacutNCDF : the first lines (USER SETTINGS) allow you to define the original 4D netcdf file, the contour file 
+ \item Edit divacutNCDF : the first lines (USER SETTINGS) allow you to define the original 4D netcdf file (in \directory{output/3Danalysis}), the contour file 
  and the output 4D cut file.
  \item Launch \command{divacutNCDF} in JRA4/Climatology.
 \end{enumerate}
