--- a/1-DivaTitlePage.tex
+++ b/1-DivaTitlePage.tex
@@ -29,7 +29,8 @@
 \includegraphics[height=7cm]{casta}
 \end{figure}
 
-\normalsize{(last modified: January~2015)}
+\normalsize{(last modified: \today)}
+
 
 \vfill
 
