--- a/5-DivaTheory.tex
+++ b/5-DivaTheory.tex
@@ -18,7 +18,7 @@ In this chapter we consider only two-dimensional cases, but generalization can b
 \begin{figure}[htpb]
 	\centering
 	\parbox{.5\textwidth}{
-		\includegraphics[width=.45\textwidth,bb=166  289 440 564]{gridding}
+		\includegraphics[width=.45\textwidth,viewport=166  289 440 564]{gridding}
 		}\parbox{.5\textwidth}{
 		\caption[Schema of the data gridding.]{Schema of the data gridding: the blue dots indicate data positions, while the nodes of the grid are the points where the field has to be determined.\label{gridproblem}}
 		}
