--- a/0-DivaHeader2012.tex
+++ b/0-DivaHeader2012.tex
@@ -243,7 +243,7 @@ pdfstartview=FitP,
 pdftoolbar=true,
 pdfmenubar=true,
 pdfwindowui=true,
-pdfauthor={C.~Troupin, M.~Ouberdous, J.-M.~Beckers},
+pdfauthor={C.~Troupin, A.~Barth, S~ Watelet, M.~Ouberdous, J.-M.~Beckers},
 pdftitle={Diva User Guide},
 pdfsubject={Geostatistics analysis tool},
 bookmarksopenlevel=2,
