edited path to figure directory

--- a/DivaWorkshop/SlidesDivaWorkshop2015/GHERheader2015.tex
+++ b/DivaWorkshop/SlidesDivaWorkshop2015/GHERheader2015.tex
@@ -27,7 +27,7 @@
 
 \DeclareGraphicsExtensions{.eps,.pdf,.JPG,.jpg,.jpeg,.png,.PNG}
 \graphicspath{
-{./figures/}
+{../figures/}
 }
 \definecolor{sdnblue}{HTML}{005baa}
 \definecolor{sdngrey}{HTML}{646464}
