--- a/src/DivaUserGuide.tex
+++ b/src/DivaUserGuide.tex
@@ -1,4 +1,4 @@
-\input{00-DivaHeader2012}	% packages, shortcuts, page format etc
+\input{00-DivaHeader}	% packages, shortcuts, page format etc
 
 
 \begin{document}
