directory for relative correlation length

--- a/src/15-Godiva.tex
+++ b/src/15-Godiva.tex
@@ -298,11 +298,10 @@ generation       &  of the considered depths and time periods\\
 
 \subsection{Outputs of input data preparation actions}
 
-Outputs resulting from a \command{divadoall} run for input data preparation actions are placed in the \directory{input} for data sets extraction and in a \directory{newinput} subdirectory for the other actions as shown in the following table:
+Outputs resulting from a \command{divadoall} run for input data preparation actions are placed in the \directory{input} directory for data sets extraction and in a \directory{newinput} subdirectory for the other actions as shown in the following table:
 
-\vspace{0.5cm}
+\vspace{1cm}
 
-\vspace{0.5cm}
 \centerline{
 \begin{tabular}{|c|l|}
 \hline
@@ -328,7 +327,7 @@ Data weighting  & The extracted data files in \directory{input/divadata} \\
 \hline
     &   \\
 Data cleaning on       & \\
- mesh, outliers        &   A {\directory{newinput/divadata}} subdirectory \\
+ mesh, outliers        &   A {\directory{newinput/divaparam}} subdirectory \\
  elimination  and      &   which contains cleaned data sets and  \\
 generation of relative &  relative length files if generated. \\
  length fields         & \\
