--- a/src/01-DivaTitlePage.tex
+++ b/src/01-DivaTitlePage.tex
@@ -50,7 +50,7 @@ University of Li\`{e}ge\\
 \vspace{.15cm}
 }\parbox{.20\textwidth}{
 \flushright
-\includegraphics[height=1.75cm]{logo_ulg.PNG}
+\includegraphics[height=1.75cm]{logo_uliege.jpeg}
 }
 
 \end{center}
