new logo ulg, typos, layout

--- a/src/02-DivaAcknowledgement.tex
+++ b/src/02-DivaAcknowledgement.tex
@@ -12,13 +12,13 @@
 \begin{center}
 \begin{minipage}[c]{.85\textwidth}
 \normalsize
-This document was written for helping oceanographers work with the \diva software. This would not have been possible without the help of scientists involved in Data Analysis projects.
+This document was written for helping oceanographers work with the \diva software tool. This would not have been possible without the help of scientists involved in Data Analysis projects.
 \newline
 \newline
 We would like to thank:
 \newline
 \newline
-the participants to the \diva workshops in Li\`{e}ge (November 2006), Calvi (November 2007, October 2008, October 2009, November 2010, November 2013, 2014, October 2015) and Roumaillac (October 2012, October 2016) for their numerous valuable comments to improve the software and the manual;
+the participants to the \diva workshops in Li\`{e}ge (November 2006 \& April 2018), Calvi (November 2007, October 2008, October 2009, November 2010, November 2013, 2014, October 2015) and Roumaillac (October 2012, October 2016) for their numerous valuable comments to improve the software and the manual;
 \newline
 \newline
 J.~Carstensen (Aarhus University, Denmark) for his contribution in the implementation of the \textit{detrending} method;
@@ -32,7 +32,7 @@ the Fund for Research Training in Industry and Agriculture (FRIA) for funding Da
 Prof. Nielsen who developed the parallel skyline solver which we adapted for use with \diva \citep{NIELSEN12}.
 \newline
 \newline
-\diva was first developed during E.U.~MODB and SeaDataNet projects; the research leading to the last developments of \diva has received funding from the European Union Seventh Framework Programme (FP7/2007-2013) under grant agreement No.~283607, SeaDataNet 2, SeaDataCloud and from project EMODnet (MARE/2008/03 - Lot 3 Chemistry - SI2.531432) from the Directorate-General for Maritime Affairs and Fisheries. 
+\diva was first developed during E.U.~MODB and SeaDataNet projects; the research leading to the last developments of \diva has received funding from the European Union Seventh Framework Programme (FP7/2007-2013) under grant agreement No.~283607, SeaDataNet~2, SeaDataCloud and from EMODnet (MARE/2008/03 - Lot 3 Chemistry - SI2.531432) from the Directorate-General for Maritime Affairs and Fisheries. 
 \vspace{2cm}
 \end{minipage}
 
