--- a/src/03-DivaConditionUse.tex
+++ b/src/03-DivaConditionUse.tex
@@ -11,19 +11,19 @@
 
  
 \vspace{.25cm}
-\diva is a software developed at the GeoHydrodynamic and Environmental Research (GHER, \url{http://modb.oce.ulg.ac.be/}) group at the University of Liège (\url{http://www.ulg.ac.be})) and that will be further developed for SeaDataNet scientific data products in \textsf{JRA4} activities. \diva is copyright $\copyright$  2006-\the\year\xspace by the GHER group and is distributed under the terms of the GNU General Public License (GPL): \url{http://www.gnu.org/copyleft/gpl.html} \index{SeaDataNet}
+\diva is a software developed at the GeoHydrodynamic and Environmental Research (GHER, \url{http://labos.ulg.ac.be/gher/}) group at the University of Liège (\url{https://www.uliege.be})) and further developed for SeaDataNet scientific data products in \textsf{JRA4} activities. \diva is copyright $\copyright$  2006-\the\year\xspace by the GHER group and is distributed under the terms of the GNU General Public License (GPL): \url{http://www.gnu.org/copyleft/gpl.html} \index{SeaDataNet}
 
-In short, this means that everyone is free to use \diva and to redistribute it on a free basis. \diva is not in the public domain; it is copyrighted and there are restrictions on its distribution (see the license \url{http://www.gnu.org/copyleft/gpl.html} and its associated FAQ \url{http://www.gnu.org/copyleft/gpl-faq.html}). For example, you cannot integrate this version of \diva (in full or in parts) in any \textit{closed-source} software you plan to distribute (commercially or not).
+In short, this means that everyone is free to use \diva and to redistribute it on a free basis. \diva is not in the public domain; it is copyrighted and there are restrictions on its distribution (see the license \url{https://www.gnu.org/copyleft/gpl.html} and its associated FAQ \url{https://www.gnu.org/licenses/gpl-faq.html}). For example, you cannot integrate this version of \diva (in full or in parts) in any \textit{closed-source} software you plan to distribute (commercially or not).
 
 If you want to integrate \diva into a closed-source software, or want to sell a modified closed-source version of \diva, please contact us in person. You can purchase a version of \diva under a different license, with \textit{no strings attached} (for example allowing you to take parts of \diva and integrate them into your own proprietary code).
 
 \vspace{.25cm}
-All SeaDataNet2 products (data and software) are freely distributed to the scientific community at the following conditions: 
+All SeaDataNet~2 products (data and software) are freely distributed to the scientific community at the following conditions: 
 
 \begin{description}
 \item[\checkmark] The products should be used for scientific purposes only.
-\item[\checkmark] Articles, papers, or written scientific works of any form, based in whole or in part on data or software supplied by SeaDataNet, will contain a suitable acknowledgement to the SeaDataNet2 program of the European Union. Related publications (see bibliography) should also be cited.
-\item[\checkmark] The applications of SeaDataNet2 products are under the full responsibility of the users; neither the Commission of the European Communities nor the SeaDataNet2 partners shall be held responsible for any consequence resulting from the use of SeaDataNet2 products. 
+\item[\checkmark] Articles, papers, or written scientific works of any form, based in whole or in part on data or software supplied by SeaDataNet, will contain a suitable acknowledgement to the SeaDataNet~2 program of the European Union. Related publications (see bibliography) should also be cited.
+\item[\checkmark] The applications of SeaDataNet~2 products are under the full responsibility of the users; neither the Commission of the European Communities nor the SeaDataNet~2 partners shall be held responsible for any consequence resulting from the use of SeaDataNet~2 products. 
 \item[\checkmark] The recipient of these data will accept responsibility of informing all data users of these conditions.
 \end{description}
 
@@ -51,7 +51,7 @@ The user who directly wants to perform analysis shall start with Part~\ref{part:
 
 For more theoretical developments, the user is invited to read Part~\ref{part:theory} as well as the corresponding bibliography.
 
-To make easier the reading of the document, different font colors are used for different type of files:
+To make easier the reading of the document, different text font and colors are used for different type of files:
 \begin{itemize}
 \item \file{the files} (ascii or binary),
 \item \command{the commands} (which can also be ascii files, but that are executable),
@@ -84,8 +84,8 @@ Various example files are provided for different situations.
 \item This document:
 
 
-Troupin, C.; Ouberdous, M.; Sirjacobs, D.; Alvera-Azcárate, A.; Barth, A.; Toussaint, M.-E.; Watelet, S. \& Beckers, J.-M. (2013) \diva User Guide.\\
-\url{http://modb.oce.ulg.ac.be/mediawiki/index.php/Diva_documents}
+Troupin, C.; Ouberdous, M.; Sirjacobs, D.; Alvera-Azcárate, A.; Barth, A.; Toussaint, M.-E.; Watelet, S. \& Beckers, J.-M. (\the\year) \diva User Guide.\\
+gher-ulg/Diva-User-Guide: v1.0 (Version v1.0). Zenodo. \doi{10.5281/zenodo.836723}
 
 
 \item and the related peer-reviewed publication:
