--- a/src/19-DivaLinks.tex
+++ b/src/19-DivaLinks.tex
@@ -17,7 +17,7 @@ SeaDataNet Home Page\\
 \url{http://modb.oce.ulg.ac.be/mediawiki/index.php/DIVA}
 \end{minipage}
 
-\item[\raisebox{-3mm}{\includegraphics[height=1cm]{gherico}}] \begin{minipage}{12cm}
+\item[\raisebox{-3mm}{\includegraphics[height=1cm]{gherlogo}}] \begin{minipage}{12cm}
 GHER Home Page\\
 \url{http://modb.oce.ulg.ac.be/}
 \end{minipage}
@@ -61,7 +61,7 @@ Python\\
 \item[]Gnuplot\\
 \url{www.gnuplot.info/}
 
-\item[\raisebox{-4mm}{\includegraphics[height=1cm]{ulglogonew}}] \begin{minipage}{12cm}
+\item[\raisebox{-4mm}{\includegraphics[height=1cm]{logo_uliege.jpeg}}] \begin{minipage}{12cm}
 University of Liège\\
 \url{http://www.ulg.ac.be/}
 \end{minipage}
